# CPP-3D-Software-Renderer

./: .gitignore  CMakeLists.txt  README.md
src/: Clipping.cpp  Clipping.h  ColorBuffer.cpp  ColorBuffer.h  GeometryRenderer.cpp  GeometryRenderer.h  Light.cpp  Light.h  Main.cpp  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Texture.h  Trangle.h  TriangleRasterizer.cpp  TriangleRasterizer.h  ZBuffer.cpp  ZBuffer.h  pch.h
src/Core/: Angle.cpp  Angle.h  AppConfig.h  AppContext.h  AppCore.h  Application.cpp  Application.h  EntryPoint.h  Graphics.h  Utils.cpp  Utils.h
src/Core/Graphics/: Vector.h
src/Core/SDLWrappers/: SDLRenderer.cpp  SDLRenderer.h  SDLTexture.cpp  SDLTexture.h  SDLWindow.cpp  SDLWindow.h
